--- a/www/css/style.css
+++ b/www/css/style.css
@@ -35,6 +35,7 @@ html{
 body{
     padding-top: 75px;
     margin: 0;
+    font-family: "Roboto";
 }
 .clr:after{
     content: "";
@@ -106,6 +107,9 @@ footer input,
     border-radius: 3px;
     border: 1px solid #c5c5d4;
 }
+.first-form .first-form-label input{
+    border: none;
+}
 select{
     border: 1px solid #c5c5d4;
     box-sizing: border-box;
@@ -168,11 +172,15 @@ textarea.texts{
 .last-menu .four-p-lt-mn,
 .third-form p,
 .seconde-form p{
-    margin: 0 0 20px 10px;
+    margin: 0 0 20px;
+}
+.third-form p{
+    margin-left: 0;
 }
 [type="radio"],
 [type="checkbox"]{
     visibility: hidden;
+    position: absolute;
 }
 .people label,
 .gender p label,
@@ -184,7 +192,7 @@ textarea.texts{
     position: absolute;
     width: 15px;
     height: 15px;
-    left: -25px;
+    left: 0;
     border-radius: 50%;
     border: 1px solid #ccc;
     margin: 0;
@@ -203,7 +211,7 @@ textarea.texts{
     width: 7px;
     height: 7px;
     top: 5px;
-    left: -20px;
+    left: 5px;
     background-color: #3e6aff;
     border-radius: 50%;
 }
@@ -232,7 +240,7 @@ textarea.texts{
     position: absolute;
     width: 15px;
     height: 15px;
-    left: -26px;
+    left: 0;
     border-radius: 3px;
     border: 1px solid #ccc;
 }
@@ -249,24 +257,35 @@ textarea.texts{
     width: 6px;
     height: 3px;
     top: 5px;
-    left: -21px;
+    left: 5px;
     transform: rotate(-45deg);
     border-bottom: 1.5px solid #244dd7;
     border-left: 1.5px solid #244dd7;
 }
 .four-form{
     width: 472px;
-    height: 112px;
     float: right;
     background-color: #f7f7f7;
     border-radius: 3px;
     border: 1px solid #e5e5e5;
     box-sizing: border-box;
+    padding: 10px 20px 20px;
 }
 .four-form p{
     display: inline-block;
     margin: 0;
-    margin-right: 34px;
+    font-size: 14px;
+    color: #1f222c;
+    font-family: "Roboto";
+    font-weight: 400;
+}
+.last-footer-p label,
+.four-form-p label{
+    padding-left: 25px;
+    margin-right: 18px;
+}
+.four-form-p .four-form-label{
+    margin-right: 0;
 }
 .four-form .last,
 .four-form p:first-child{
@@ -274,14 +293,13 @@ textarea.texts{
     color: #b3b3b3;
     font-family: "Roboto";
     font-weight: 700;
-    padding: 24px 20px 16px;
+    line-height: 40px;
     box-sizing: border-box;
     margin: 0;
-    margin-right: 14px;
+    margin-right: 34px;
 }
 .four-form .last{
-    padding: 16px 20px 24px;
-    margin-right: 16px;
+    margin-right: 46px;
 }
 .data-form label input{
     width: 152px;
@@ -325,9 +343,9 @@ textarea.texts{
     margin-bottom: 10px;
 }
 .gender{
-    padding-left: 55px;
     width: 275px;
     float: left;
+    margin-right: 162px;
 }
 .gender p{
     margin: 0;
@@ -335,14 +353,14 @@ textarea.texts{
 }
 .women,
 .men{
-    padding-left: 15px;
+    padding-left: 85px;
 }
 .gender .men input+label:before{
     content: "";
     position: absolute;
     width: 72px;
     height: 72px;
-    left: -72px;
+    left: 0;
     top: -28px;
     background: url(../img/people.png) no-repeat;
     background-position: 0 0;
@@ -352,7 +370,7 @@ textarea.texts{
     position: absolute;
     width: 72px;
     height: 72px;
-    left: -72px;
+    left: 0;
     top: -28px;
     background: url(../img/people.png) no-repeat;
     background-position: 0 -72px;
@@ -362,7 +380,7 @@ textarea.texts{
     position: absolute;
     width: 72px;
     height: 72px;
-    left: -72px;
+    left: 0;
     top: -28px;
     background: url(../img/people.png) no-repeat;
     background-position: -72px 0;
@@ -372,7 +390,7 @@ textarea.texts{
     position: absolute;
     width: 72px;
     height: 72px;
-    left: -72px;
+    left: 0;
     top: -28px;
     background: url(../img/people.png) no-repeat;
     background-position: -72px -72px;
@@ -382,7 +400,6 @@ textarea.texts{
     color: #3e6aff;
 }
 .genders{
-    padding-left: 112px;
     width: 238px;
     float: left;
 }
@@ -392,15 +409,15 @@ textarea.texts{
 }
 .genders label{
     position: relative;
-    padding-left: 19px;
+    padding-left: 55px;
 }
 .genders label:before{
     content: "";
     position: absolute;
     width: 45px;
     height: 25px;
-    left: -45px;
-    top: -3px;
+    left: 0;
+    top: -4px;
     border-radius: 25px;
     background-color: #cfcfd1;
 }
@@ -409,8 +426,8 @@ textarea.texts{
     position: absolute;
     width: 21px;
     height: 21px;
-    top: -0.5px;
-    left: -42px;
+    left: 3px;
+    top: -2px;
     background-color: #ffffff;
     border-radius: 50%;
 }
@@ -418,7 +435,7 @@ textarea.texts{
     background-color: #3e6aff;
 }
 .genders input:checked+label:after{
-    left: -23px;
+    left: 21px;
     background-color: #ffffff;
 }
 .first-forms tbody tr:last-child th input{
@@ -457,7 +474,7 @@ textarea.texts{
     position: absolute;
     width: 15px;
     height: 15px;
-    left: -25px;
+    left: 0;
     border-radius: 50%;
     border: 1px solid #ccc;
 }
@@ -467,7 +484,7 @@ textarea.texts{
     width: 7px;
     height: 7px;
     top: 5px;
-    left: -20px;
+    left: 5px;
     border-radius: 50%;
     background-color: #3e6aff;
 }
