--- a/www/css/style.css
+++ b/www/css/style.css
@@ -45,6 +45,17 @@ body{
 input{
     margin: 0;
 }
+input:focus,
+textarea:focus,
+select:focus{
+    border-radius: 3px;
+    filter: drop-shadow(0 0 2.5px rgba(62,106,255,0.55));
+    background-color: #ffffff;
+    border: 1px solid #3e6aff;
+}
+th{
+    font-weight: normal;
+}
 input,
 textarea{
     box-sizing: border-box;
@@ -112,8 +123,10 @@ footer input,
     border: none;
 }
 .first-form-label input:hover{
-    background-color: #52CA5C;
-    filter: drop-shadow(0px 5px 6px rgba(0,0,0,0.15));
+    border-radius: 3px;
+    filter: drop-shadow(0px 2px 2.5px rgba(8,118,52,0.35));
+    background-color: #07be51;
+    transition: all 0.5s ease;
     cursor: pointer;
 }
 select{
@@ -131,7 +144,6 @@ select{
     color: black;
     -webkit-appearance: none;
     appearance: none;
-    position: relative;
 }
 .about option:disabled{
     display: none;
@@ -586,6 +598,7 @@ footer span{
 .baton:hover{
     background-color: #84868d;
     color: white;
+    transition: all 0.5s ease;
     cursor: pointer;
 }
 .last-form{
