--- a/www/css/style.css
+++ b/www/css/style.css
@@ -171,7 +171,7 @@ form .selects:before{
 }
 .submit{
     width: 100%;
-    padding: 11px 15px;
+    padding: 14px 15px;
     background-color: #12d661;
     border: #12d661;
     font-size: 14px;
@@ -479,6 +479,7 @@ textarea.texts{
 }
 .first-forms tbody tr:last-child th input{
     margin-bottom: 0;
+    padding: 14px 0;
 }
 .first-form{
     text-align: left;
@@ -587,11 +588,10 @@ footer span{
 }
 .baton{
     width: 180px;
-    height: 43px;
     background-color: #ffffff;
     border: 1px solid #84868d;
     text-align: center;
-    padding: 0 15px;
+    padding: 13px 15px;
     font-size: 14px;
     color: #6e6f77;
     font-family: "Roboto";
@@ -615,10 +615,10 @@ footer span{
 }
 .second-baton{
     width: 180px;
-    height: 43px;
     border-radius: 3px;
     background-color: #12d661;
     border: none;
+    padding: 14px 0;
     color: #ffffff;
     font-size: 14px;
     font-family: "Roboto";
